--- a/config-prometheus.json
+++ b/config-prometheus.json
@@ -3,9 +3,10 @@
   "listen_port": 8080,
   "upstream_url": "http://localhost:8888",
   "log_level": "info",
-  "max_body_size": 52428800,
+  "max_body_size": 1048576,
   "prometheus": {
-    "max_bytes_per_scrape": 10000
+    "max_input_bytes_per_scrape": 10485760,
+    "max_output_bytes_per_scrape": 10485760
   },
   "policy_providers": [
     {
